--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li><a href="#services-section" class="nav-link">Services</a></li>
                 <!-- <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li> -->
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                <li><a href="give.html" target="_blank" class="nav-link">Give</a></li>
+                <li><a href="#get-parking-section" target="_blank" class="nav-link">Get Parking</a></li>
               </ul>
             </nav>
           </div>
@@ -108,7 +108,7 @@
             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">to Parkoba</p>
             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Park with pride</p>
             <div data-aos="fade-up" data-aos-delay="100">
-              <a href="#contact-section" class="btn smoothscroll btn-primary mr-2 mb-2">Get In Touch</a>
+              <a href="#get-parking-section" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
             </div>
           </div>
 
