--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li class="has-children">
                   <a href="#about-section" class="nav-link">About Us</a>
                   <ul class="dropdown">
-                    <li><a href="#vision-section" class="nav-link">Vision</a></li>
+                    <li><a href="#Booking" class="nav-link">Booking Hours</a></li>
                     <!-- <li><a href="#pricing-section" class="nav-link">Services</a></li> -->
                     <!-- <li><a href="#faq-section" class="nav-link">FAQ</a></li> -->
                     <!-- <li class="has-children">
@@ -77,7 +77,7 @@
                   </ul>
                 </li>
 
-                <li><a href="gallery.html" target="_blank" class="nav-link">Gallery</a></li>
+                <!-- <li><a href="gallery.html" target="_blank" class="nav-link">Gallery</a></li> -->
                 <li><a href="#services-section" class="nav-link">Services</a></li>
                 <!-- <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li> -->
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
@@ -97,7 +97,8 @@
 
 
 
-    <div class="site-blocks-cover overlay" style="background-image: url(dp.webp);" data-aos="fade" id="home-section">
+    <div class="site-blocks-cover overlay" style="background-image: url(img/dp.webp);" data-aos="fade"
+      id="home-section">
 
       <div class="container">
         <div class="row align-items-center justify-content-center">
@@ -133,7 +134,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
             <figure class="circle-bg">
-              <img src="key.webp" alt="Image" class="img-fluid">
+              <img src="img/key.webp" alt="Image" class="img-fluid">
             </figure>
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -155,7 +156,7 @@
       </div>
     </div>
 
-    <div class="site-section cta-big-image" id="vision-section">
+    <div class="site-section cta-big-image" id="Booking">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center" data-aos="fade">
@@ -165,7 +166,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
             <figure class="circle-bg">
-              <img src="space.webp" alt="Image" class="img-fluid">
+              <img src="img/space.webp" alt="Image" class="img-fluid">
             </figure>
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -195,8 +196,8 @@
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
 
             <div class="owl-carousel slide-one-item-alt">
-              <img src="many.webp" alt="Image" class="img-fluid">
-              <img src="DACE.webp" alt="Image" class="img-fluid">
+              <img src="img/many.webp" alt="Image" class="img-fluid">
+              <img src="img/DACE.webp" alt="Image" class="img-fluid">
               <!-- <img src="images/4.jpg" alt="Image" class="img-fluid">
               <img src="images/56.jpg" alt="Image" class="img-fluid">
               <img src="images/6.jpg" alt="Image" class="img-fluid">
@@ -245,7 +246,7 @@
         <div class="row mb-5">
 
           <div class="col-lg-5 ml-auto mb-5 order-1 order-lg-2" data-aos="fade" data-aos="fade-up" data-aos-delay="">
-            <img src="Customer care.jpg" alt="Image" class="img-fluid rounded">
+            <img src="img/Customer care.jpg" alt="Image" class="img-fluid rounded">
           </div>
           <div class="col-lg-6 order-2 order-lg-1" data-aos="fade">
 
