--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2">
-            <a href="#"> <img src="check.jpg" class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><span
+            <a href="#"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><span
                   class="text-primary"></span> </a>
               </img>
             </a>
@@ -109,7 +109,7 @@
             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">to Parkoba</p>
             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Park with pride</p>
             <div data-aos="fade-up" data-aos-delay="100">
-              <a href="#get-parking-section" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
+              <a href="Get-parking.html" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
             </div>
           </div>
 
@@ -241,6 +241,11 @@
         </div>
       </div>
     </section>
+
+
+
+   
+
     <section class="site-section" id="services-section">
       <div class="container">
         <div class="row mb-5">
@@ -281,6 +286,8 @@
         </div>
       </div>
     </section>
+
+
 
     <!-- <section class="site-section testimonial-wrap" id="testimonials-section" data-aos="fade">
       <div class="container">
