--- a/Get-parking.html
+++ b/Get-parking.html
@@ -62,9 +62,10 @@
                                 <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                                     <li><a href="#home-section" class="nav-link">Home</a></li>
                                     <li class="has-children">
-                                        <a href="#about-section" class="nav-link">About Us</a>
+                                        <a href="/index.html" class="nav-link">About Us</a>
                                         <ul class="dropdown">
-                                            <li><a href="#Booking" class="nav-link">Booking Hours</a></li>
+                                            <li><a href="/index.html/#" class="nav-link">Booking Hours</a>
+                                            </li>
                                             <!-- <li><a href="#pricing-section" class="nav-link">Services</a></li> -->
                                             <!-- <li><a href="#faq-section" class="nav-link">FAQ</a></li> -->
                                             <!-- <li class="has-children">
@@ -87,10 +88,6 @@
                                 </ul>
                             </nav>
                         </div>
-
-
-
-
                         <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;">
                             <a href="#" class="site-menu-toggle js-menu-toggle float-right"><span
                                     class="icon-menu h3"></span></a></div>
@@ -101,55 +98,10 @@
 
             </header>
 
-            <div class="site-blocks-cover overlay" style="background-image: url(img/dp.webp);" data-aos="fade"
-                id="home-section">
+        </div>
 
-                <div class="container">
-                   
-                    
-                </div>
-
-                <a
-            </div>
-            <section class="download-app-section">
-                <div class="site-section cta-big-image" id="about-section">
-                    <div class="container">
-                        <div class="row mb-5">
-                            <div class="col-12 text-center" data-aos="fade">
-                                <h2 class="section-title mb-3">Get Parking</h2>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-                                <figure class="circle-bg">
-                                    <img src="img/phone.jpg" alt="Image" class="img-fluid">
-                                </figure>
-                            </div>
-                            <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
-                                <marquee behavior="scroll" direction="left">Get a parking under 3 minutes </strong>
-                                </marquee>
-                                </marquee>
-                                <!-- <div class="mb-4">Give</h3> -->
-                                <p>Download Our newly updated App to get parking</p>
-
-                                <section class="get-parking-section">
-
-
-                                    <div class="containerai">
-                                        <img src="img/ios-download-button - Copy.png" alt="Image 1" class="imager">
-                                        <img src="img/android-download-button.png" alt="Image 2" class="imager">
-                                    </div>
-                                </section>
-
-                                <!-- <strong class="account">2452022943 <br> EcoBank <br> Friends of God Fellowship</strong> -->
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </section>
     </section>
+    </div>
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
