--- a/Get-parking.html
+++ b/Get-parking.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/booking.css">
     <link rel="shortcut icon" href="parkoba icon no bg  .png" type="image/x-icon">
 </head>
 
@@ -97,6 +98,11 @@
                 </div>
 
             </header>
+
+
+            <section class="phone ">
+
+            </section>
 
         </div>
 
