--- a/Get-parking.html
+++ b/Get-parking.html
@@ -43,8 +43,6 @@
                 <div class="site-mobile-menu-body"></div>
             </div>
 
-
-
             <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
 
                 <div class="container">
@@ -61,11 +59,11 @@
                             <nav class="site-navigation position-relative text-right" role="navigation">
 
                                 <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                                    <li><a href="#home-section" class="nav-link">Home</a></li>
+                                    <li><a href="index.html" class="nav-link">Home</a></li>
                                     <li class="has-children">
-                                        <a href="/index.html" class="nav-link">About Us</a>
+                                        <a href="./index.html/" class="nav-link">About Us</a>
                                         <ul class="dropdown">
-                                            <li><a href="/index.html/#" class="nav-link">Booking Hours</a>
+                                            <li><a href="./index.html/#" class="nav-link">Booking Hours</a>
                                             </li>
                                             <!-- <li><a href="#pricing-section" class="nav-link">Services</a></li> -->
                                             <!-- <li><a href="#faq-section" class="nav-link">FAQ</a></li> -->
@@ -81,7 +79,7 @@
                                     </li>
 
                                     <!-- <li><a href="gallery.html" target="_blank" class="nav-link">Gallery</a></li> -->
-                                    <li><a href="#services-section" class="nav-link">Services</a></li>
+                                    <li><a href="./index.html/#" class="nav-link">Services</a></li>
                                     <!-- <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li> -->
                                     <li><a href="#contact-section" class="nav-link">Contact</a></li>
                                     <li><a href="#get-parking-section" target="_blank" class="nav-link">Get Parking</a>
@@ -94,21 +92,19 @@
                                     class="icon-menu h3"></span></a></div>
 
                     </div>
-
                 </div>
-
             </header>
-
-
-            <section class="phone ">
-
-            </section>
-
         </div>
-
     </section>
-    </div>
 
+    </div>
+    <section class="phone ">
+        <div class="container-2">
+            <img src="img/phone.jpg" alt="Large Image" class="phone-img">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet arcu libero. Sed eget velit
+                id ex fermentum bibendum quis sed erat.</p>
+        </div>
+    </section>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="js/popper.min.js"></script>
@@ -120,8 +116,7 @@
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/jquery.sticky.js"></script>
     <script src="js/isotope.pkgd.min.js"></script>
-
-
+    <script src="js/booking.js"></script>
     <script src="js/main.js"></script>
 </body>
 
