--- a/give.html
+++ b/give.html
@@ -47,7 +47,7 @@
             <div class="row align-items-center">
 
                 <div class="col-6 col-xl-2">
-                    <a href="#"> <img src="images/logo2.png" class="mb-0 site-logo"><a href="#" class="h2 mb-0"><span
+                    <a href="#"> <img src="img/lo.jpg" class="mb-0 site-logo"><a href="#" class="h2 mb-0"><span
                                 class="text-primary"></span> </a>
                         </img>
                     </a>
@@ -102,28 +102,20 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-12 text-center" data-aos="fade">
-                    <h2 class="section-title mb-3">Give </h2>
+                    <h2 class="section-title mb-3">Downoload</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
                     <figure class="circle-bg">
-                        <img src="images/23.jpg" alt="Image" class="img-fluid">
+                        <img src="img/phone.jpg" alt="Image" class="img-fluid">
                     </figure>
                 </div>
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
-                    <marquee behavior="scroll" direction="left">2 Corinthians 9:6-8 Remember this: Whoever sows
-                        sparingly will also reap
-                        sparingly, and whoever sows generously will also reap generously. Each of you should give what
-                        you have decided in your heart to give, not reluctantly or under compulsion, for God loves a
-                        cheerful giver.</strong></marquee>
+                    <marquee behavior="scroll" direction="left">Get Parking umder two minutes </strong></marquee>
                     </marquee>
                     <!-- <div class="mb-4">Give</h3> -->
-                    <p>Friends of God fellowship is a generous community. Please give as much as you are able to
-                        help us with our mission of transforming lives in Lagos and beyond. You can easily donate
-                        online or contribute during each of our services. “The world of the generous gets larger and
-                        larger; the world of the stingy gets smaller and smaller” (Proverbs 11:24). Thank you for
-                        your faithful support.</p>
+                    <p>Download our App and get a parking under three minutes </p>
 
                     <strong class="account">2452022943 <br> EcoBank <br> Friends of God Fellowship</strong>
 
