--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">to Parkoba</p>
             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Park with pride</p>
             <div data-aos="fade-up" data-aos-delay="100">
-              <a href="Get-parking.html" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
+              <a href="give.html" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
             </div>
           </div>
 
@@ -244,7 +244,7 @@
 
 
 
-   
+
 
     <section class="site-section" id="services-section">
       <div class="container">
