--- a/give.html
+++ b/give.html
@@ -21,7 +21,7 @@
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-    <!-- <div id="overlayer"></div>
+     <div id="overlayer"></div>
     <div class="loader">
         <div class="spinner-border text-primary" role="status">
             <span class="sr-only">Loading...</span>
@@ -38,17 +38,16 @@
                 </div>
             </div>
             <div class="site-mobile-menu-body"></div>
-        </div> -->
+        </div>
 
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
-
 
         <div class="container">
             <div class="row align-items-center">
 
                 <div class="col-6 col-xl-2">
-                    <a href="#"> <img src="img/lo.jpg" class="mb-0 site-logo"><a href="#" class="h2 mb-0"><span
-                                class="text-primary"></span> </a>
+                    <a href="#"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html"
+                            class="h2 mb-0"><span class="text-primary"></span> </a>
                         </img>
                     </a>
                 </div>
@@ -57,29 +56,29 @@
                     <nav class="site-navigation position-relative text-right" role="navigation">
 
                         <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                            <li><a href="index.html" class="nav-link">Home</a></li>
+                            <li><a href="#home-section" class="nav-link">Home</a></li>
                             <li class="has-children">
-                                <a href="index.html/#about-section" class="nav-link">About Us</a>
+                                <a href="#about-section" class="nav-link">About Us</a>
                                 <ul class="dropdown">
-                                    <li><a href="#vision-section" class="nav-link">Vision</a></li>
+                                    <li><a href="#Booking" class="nav-link">Booking Hours</a></li>
                                     <!-- <li><a href="#pricing-section" class="nav-link">Services</a></li> -->
                                     <!-- <li><a href="#faq-section" class="nav-link">FAQ</a></li> -->
                                     <!-- <li class="has-children">
-                                    <a href="#">More Links</a>
-                                    <ul class="dropdown">
-                                      <li><a href="#">Menu One</a></li>
-                                      <li><a href="#">Menu Two</a></li>
-                                      <li><a href="#">Menu Three</a></li>
-                                    </ul>
-                                  </li> -->
+                            <a href="#">More Links</a>
+                            <ul class="dropdown">
+                              <li><a href="#">Menu One</a></li>
+                              <li><a href="#">Menu Two</a></li>
+                              <li><a href="#">Menu Three</a></li>
+                            </ul>
+                          </li> -->
                                 </ul>
                             </li>
 
-                            <li><a href="gallery.html" class="nav-link">Gallery</a></li>
+                            <!-- <li><a href="gallery.html" target="_blank" class="nav-link">Gallery</a></li> -->
                             <li><a href="#services-section" class="nav-link">Services</a></li>
                             <!-- <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li> -->
-                            <li><a href="index.html/#contact-section" class="nav-link">Contact</a></li>
-                            <li><a href="give.html" class="nav-link">Give</a></li>
+                            <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                            <li><a href="#get-parking-section" target="_blank" class="nav-link">Get Parking</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -92,76 +91,76 @@
             </div>
         </div>
 
-    </header>
+        </header>
 
-    </div>
+        </div>
 
 
 
-    <div class="site-section cta-big-image" id="about-section">
-        <div class="container">
-            <div class="row mb-5">
-                <div class="col-12 text-center" data-aos="fade">
-                    <h2 class="section-title mb-3">Downoload</h2>
+        <div class="site-section cta-big-image" id="about-section">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-12 text-center" data-aos="fade">
+                        <h2 class="section-title mb-3">Downoload</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-                    <figure class="circle-bg">
-                        <img src="img/phone.jpg" alt="Image" class="img-fluid">
-                    </figure>
-                </div>
-                <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
-                    <marquee behavior="scroll" direction="left">Get Parking umder two minutes </strong></marquee>
-                    </marquee>
-                    <!-- <div class="mb-4">Give</h3> -->
-                    <p>Download our App and get a parking under three minutes </p>
+                <div class="row">
+                    <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
+                        <figure class="circle-bg">
+                            <img src="img/phone.jpg" alt="Image" class="img-fluid">
+                        </figure>
+                    </div>
+                    <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
+                        <marquee behavior="scroll" direction="left">Get Parking umder two minutes </strong></marquee>
+                        </marquee>
+                        <!-- <div class="mb-4">Give</h3> -->
+                        <p>Download our App and get a parking under three minutes </p>
 
-                    <strong class="account">2452022943 <br> EcoBank <br> Friends of God Fellowship</strong>
+                        <strong class="account">2452022943 <br> EcoBank <br> Friends of God Fellowship</strong>
 
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
 
-    <footer class="site-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-9">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <h2 class="footer-heading mb-4">About Us</h2>
-                            <p>Our mission is to serve God, through encouraging and teaching them those who are
-                                oppressed and down
-                                casted both physically and spiritually. </p>
-                        </div>
-                        <div class="col-md-3 ml-auto">
-                            <h2 class="footer-heading mb-4">Quick Links</h2>
-                            <ul class="list-unstyled">
-                                <li><a href="index.html/#about-section" class="smoothscroll">About Us</a></li>
-                                <li><a href="index.html/#services-section" class="smoothscroll">Services</a></li>
-                                <!-- <li><a href="index.html/#testimonials-section" class="smoothscroll">Testimonials</a></li> -->
-                                <li><a href="index.html/#contact-section" class="smoothscroll">Contact Us</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3">
-                            <h2 class="footer-heading mb-4">Follow Us</h2>
-                            <a href="https://www.facebook.com/FriendsOfGodFellowship/" class="pl-0 pr-3"><span
-                                    class="icon-facebook"></span></a>
-                            <a href="https://www.facebook.com/FriendsOfGodFellowship/" class="pl-3 pr-3"><span
-                                    class="icon-twitter"></span></a>
-                            <a href="https://www.instagram.com/fgfofficiall/" class="pl-3 pr-3"><span
-                                    class="icon-instagram"></span></a>
-                            <!-- <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a> -->
+        <footer class="site-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-9">
+                        <div class="row">
+                            <div class="col-md-5">
+                                <h2 class="footer-heading mb-4">About Us</h2>
+                                <p>Our mission is to serve God, through encouraging and teaching them those who are
+                                    oppressed and down
+                                    casted both physically and spiritually. </p>
+                            </div>
+                            <div class="col-md-3 ml-auto">
+                                <h2 class="footer-heading mb-4">Quick Links</h2>
+                                <ul class="list-unstyled">
+                                    <li><a href="index.html/#about-section" class="smoothscroll">About Us</a></li>
+                                    <li><a href="index.html/#services-section" class="smoothscroll">Services</a></li>
+                                    <!-- <li><a href="index.html/#testimonials-section" class="smoothscroll">Testimonials</a></li> -->
+                                    <li><a href="index.html/#contact-section" class="smoothscroll">Contact Us</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-md-3">
+                                <h2 class="footer-heading mb-4">Follow Us</h2>
+                                <a href="https://www.facebook.com/FriendsOfGodFellowship/" class="pl-0 pr-3"><span
+                                        class="icon-facebook"></span></a>
+                                <a href="https://www.facebook.com/FriendsOfGodFellowship/" class="pl-3 pr-3"><span
+                                        class="icon-twitter"></span></a>
+                                <a href="https://www.instagram.com/fgfofficiall/" class="pl-3 pr-3"><span
+                                        class="icon-instagram"></span></a>
+                                <!-- <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a> -->
+                            </div>
                         </div>
                     </div>
-                </div>
 
 
 
-                <!-- <div class="col-md-3">
+                    <!-- <div class="col-md-3">
             <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
             <form action="#" method="post" class="footer-subscribe">
               <div class="input-group mb-3">
@@ -173,41 +172,41 @@
               </div>
             </form>
           </div> -->
-            </div>
-            <div class="row pt-5 mt-5 text-center">
-                <div class="col-md-12">
-                    <div class="border-top pt-5">
-                        <p>
-                            FGF &copy;<script>
-                                document.write(new Date().getFullYear());
-                            </script> All rights reserved |<i class="icon-heart text-danger" aria-hidden="true"></i>
-                            Developed by <a href="https://oluwatobiloba2905.github.io/My-portfoilo/index.html"
-                                target="_blank">Tobias</a>
-                        </p>
-
-                    </div>
                 </div>
+                <div class="row pt-5 mt-5 text-center">
+                    <div class="col-md-12">
+                        <div class="border-top pt-5">
+                            <p>
+                                FGF &copy;<script>
+                                    document.write(new Date().getFullYear());
+                                </script> All rights reserved |<i class="icon-heart text-danger" aria-hidden="true"></i>
+                                Developed by <a href="https://oluwatobiloba2905.github.io/My-portfoilo/index.html"
+                                    target="_blank">Tobias</a>
+                            </p>
 
+                        </div>
+                    </div>
+
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 
 
 
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/jquery-ui.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/jquery.fancybox.min.js"></script>
-    <script src="js/jquery.sticky.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
+        <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/jquery-ui.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/jquery.countdown.min.js"></script>
+        <script src="js/jquery.easing.1.3.js"></script>
+        <script src="js/aos.js"></script>
+        <script src="js/jquery.fancybox.min.js"></script>
+        <script src="js/jquery.sticky.js"></script>
+        <script src="js/isotope.pkgd.min.js"></script>
 
 
-    <script src="js/main.js"></script>
+        <script src="js/main.js"></script>
 
 </body>
 
