--- a/give.html
+++ b/give.html
@@ -21,7 +21,7 @@
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-     <div id="overlayer"></div>
+    <div id="overlayer"></div>
     <div class="loader">
         <div class="spinner-border text-primary" role="status">
             <span class="sr-only">Loading...</span>
@@ -29,8 +29,8 @@
     </div>
 
 
-    <div class="site-wrap">
 
+    <div class="site-wrap">
         <div class="site-mobile-menu site-navbar-target">
             <div class="site-mobile-menu-header">
                 <div class="site-mobile-menu-close mt-3">
@@ -40,127 +40,140 @@
             <div class="site-mobile-menu-body"></div>
         </div>
 
-    <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
 
-        <div class="container">
-            <div class="row align-items-center">
 
-                <div class="col-6 col-xl-2">
-                    <a href="#"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html"
-                            class="h2 mb-0"><span class="text-primary"></span> </a>
-                        </img>
-                    </a>
-                </div>
+        <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
 
-                <div class="col-12 col-md-10 d-none d-xl-block">
-                    <nav class="site-navigation position-relative text-right" role="navigation">
+            <div class="container">
+                <div class="row align-items-center">
 
-                        <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                            <li><a href="#home-section" class="nav-link">Home</a></li>
-                            <li class="has-children">
-                                <a href="#about-section" class="nav-link">About Us</a>
-                                <ul class="dropdown">
-                                    <li><a href="#Booking" class="nav-link">Booking Hours</a></li>
-                                    <!-- <li><a href="#pricing-section" class="nav-link">Services</a></li> -->
-                                    <!-- <li><a href="#faq-section" class="nav-link">FAQ</a></li> -->
-                                    <!-- <li class="has-children">
-                            <a href="#">More Links</a>
-                            <ul class="dropdown">
-                              <li><a href="#">Menu One</a></li>
-                              <li><a href="#">Menu Two</a></li>
-                              <li><a href="#">Menu Three</a></li>
+                    <div class="col-6 col-xl-2">
+                        <a href="#"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html"
+                                class="h2 mb-0"><span class="text-primary"></span> </a>
+                            </img>
+                        </a>
+                    </div>
+
+                    <div class="col-12 col-md-10 d-none d-xl-block">
+                        <nav class="site-navigation position-relative text-right" role="navigation">
+
+                            <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+                                <li><a href="#home-section" class="nav-link">Home</a></li>
+                                <li class="has-children">
+                                    <a href="#about-section" class="nav-link">About Us</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#Booking" class="nav-link">Booking Hours</a></li>
+                                        <!-- <li><a href="#pricing-section" class="nav-link">Services</a></li> -->
+                                        <!-- <li><a href="#faq-section" class="nav-link">FAQ</a></li> -->
+                                        <!-- <li class="has-children">
+                      <a href="#">More Links</a>
+                      <ul class="dropdown">
+                        <li><a href="#">Menu One</a></li>
+                        <li><a href="#">Menu Two</a></li>
+                        <li><a href="#">Menu Three</a></li>
+                      </ul>
+                    </li> -->
+                                    </ul>
+                                </li>
+
+                                <!-- <li><a href="gallery.html" target="_blank" class="nav-link">Gallery</a></li> -->
+                                <li><a href="#services-section" class="nav-link">Services</a></li>
+                                <!-- <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li> -->
+                                <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                                <li><a href="#get-parking-section" target="_blank" class="nav-link">Get Parking</a></li>
                             </ul>
-                          </li> -->
-                                </ul>
-                            </li>
+                        </nav>
+                    </div>
 
-                            <!-- <li><a href="gallery.html" target="_blank" class="nav-link">Gallery</a></li> -->
-                            <li><a href="#services-section" class="nav-link">Services</a></li>
-                            <!-- <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li> -->
-                            <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                            <li><a href="#get-parking-section" target="_blank" class="nav-link">Get Parking</a></li>
-                        </ul>
-                    </nav>
+
+                    <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a
+                            href="#" class="site-menu-toggle js-menu-toggle float-right"><span
+                                class="icon-menu h3"></span></a></div>
+
                 </div>
-
-
-                <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a
-                        href="#" class="site-menu-toggle js-menu-toggle float-right"><span
-                            class="icon-menu h3"></span></a></div>
-
             </div>
-        </div>
 
         </header>
-
-        </div>
 
 
 
         <div class="site-section cta-big-image" id="about-section">
-            <div class="container">
-                <div class="row mb-5">
-                    <div class="col-12 text-center" data-aos="fade">
-                        <h2 class="section-title mb-3">Downoload</h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-                        <figure class="circle-bg">
-                            <img src="img/phone.jpg" alt="Image" class="img-fluid">
-                        </figure>
-                    </div>
-                    <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
-                        <marquee behavior="scroll" direction="left">Get Parking umder two minutes </strong></marquee>
-                        </marquee>
-                        <!-- <div class="mb-4">Give</h3> -->
-                        <p>Download our App and get a parking under three minutes </p>
-
-                        <strong class="account">2452022943 <br> EcoBank <br> Friends of God Fellowship</strong>
-
-                    </div>
-                </div>
+        <div class="container">
+          <div class="row mb-5">
+            <div class="col-12 text-center" data-aos="fade">
+              <h2 class="section-title mb-3">About Us</h2>
             </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
+              <figure class="circle-bg">
+                <img src="img/key.webp" alt="Image" class="img-fluid">
+              </figure>
+            </div>
+            <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
+              <div class="mb-4">
+                <h3 class="h3 mb-4 text-black">About Parkoba</h3>
+                <p>We are a small startup enterprise dedicated in helping Nigeria curb The flow of traffic and illegal
+                  parking. We believe that all of our customers deserve the highest level of service, and we are committed
+                  to providing just that. We are a small startup enterprise with the mission to reduce the
+                  flow of traffic and Illegal Parking in Nigeria.Parkoba allows drivers to find the closest parking to
+                  their destination, tells them how much it will cost and whether the space is available.... which means
+                  no more driving around looking for parking!
+                  Get a parking today and experience our fast, affordable and Parking Spot.
+                  Get a parking today and experience our fast and affordable Parking Spot locator.
+                  Explore the rest of our site to learn more about what we have to offer, and get in touch with any
+                  questions. Parkoba is here for you. </p>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
 
 
 
-        <footer class="site-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-9">
-                        <div class="row">
-                            <div class="col-md-5">
-                                <h2 class="footer-heading mb-4">About Us</h2>
-                                <p>Our mission is to serve God, through encouraging and teaching them those who are
-                                    oppressed and down
-                                    casted both physically and spiritually. </p>
-                            </div>
-                            <div class="col-md-3 ml-auto">
-                                <h2 class="footer-heading mb-4">Quick Links</h2>
-                                <ul class="list-unstyled">
-                                    <li><a href="index.html/#about-section" class="smoothscroll">About Us</a></li>
-                                    <li><a href="index.html/#services-section" class="smoothscroll">Services</a></li>
-                                    <!-- <li><a href="index.html/#testimonials-section" class="smoothscroll">Testimonials</a></li> -->
-                                    <li><a href="index.html/#contact-section" class="smoothscroll">Contact Us</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-md-3">
-                                <h2 class="footer-heading mb-4">Follow Us</h2>
-                                <a href="https://www.facebook.com/FriendsOfGodFellowship/" class="pl-0 pr-3"><span
-                                        class="icon-facebook"></span></a>
-                                <a href="https://www.facebook.com/FriendsOfGodFellowship/" class="pl-3 pr-3"><span
-                                        class="icon-twitter"></span></a>
-                                <a href="https://www.instagram.com/fgfofficiall/" class="pl-3 pr-3"><span
-                                        class="icon-instagram"></span></a>
-                                <!-- <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a> -->
-                            </div>
+
+
+
+
+    </div>
+
+
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <h2 class="footer-heading mb-4">About Us</h2>
+                            <p>Our mission is to serve God, through encouraging and teaching them those who are
+                                oppressed and down
+                                casted both physically and spiritually. </p>
+                        </div>
+                        <div class="col-md-3 ml-auto">
+                            <h2 class="footer-heading mb-4">Quick Links</h2>
+                            <ul class="list-unstyled">
+                                <li><a href="index.html/#about-section" class="smoothscroll">About Us</a></li>
+                                <li><a href="index.html/#services-section" class="smoothscroll">Services</a></li>
+                                <!-- <li><a href="index.html/#testimonials-section" class="smoothscroll">Testimonials</a></li> -->
+                                <li><a href="index.html/#contact-section" class="smoothscroll">Contact Us</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3">
+                            <h2 class="footer-heading mb-4">Follow Us</h2>
+                            <a href="https://www.facebook.com/FriendsOfGodFellowship/" class="pl-0 pr-3"><span
+                                    class="icon-facebook"></span></a>
+                            <a href="https://www.facebook.com/FriendsOfGodFellowship/" class="pl-3 pr-3"><span
+                                    class="icon-twitter"></span></a>
+                            <a href="https://www.instagram.com/fgfofficiall/" class="pl-3 pr-3"><span
+                                    class="icon-instagram"></span></a>
+                            <!-- <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a> -->
                         </div>
                     </div>
+                </div>
 
 
 
-                    <!-- <div class="col-md-3">
+                <!-- <div class="col-md-3">
             <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
             <form action="#" method="post" class="footer-subscribe">
               <div class="input-group mb-3">
@@ -172,41 +185,41 @@
               </div>
             </form>
           </div> -->
-                </div>
-                <div class="row pt-5 mt-5 text-center">
-                    <div class="col-md-12">
-                        <div class="border-top pt-5">
-                            <p>
-                                FGF &copy;<script>
-                                    document.write(new Date().getFullYear());
-                                </script> All rights reserved |<i class="icon-heart text-danger" aria-hidden="true"></i>
-                                Developed by <a href="https://oluwatobiloba2905.github.io/My-portfoilo/index.html"
-                                    target="_blank">Tobias</a>
-                            </p>
-
-                        </div>
-                    </div>
-
-                </div>
             </div>
-        </footer>
+            <div class="row pt-5 mt-5 text-center">
+                <div class="col-md-12">
+                    <div class="border-top pt-5">
+                        <p>
+                            FGF &copy;<script>
+                                document.write(new Date().getFullYear());
+                            </script> All rights reserved |<i class="icon-heart text-danger" aria-hidden="true"></i>
+                            Developed by <a href="https://oluwatobiloba2905.github.io/My-portfoilo/index.html"
+                                target="_blank">Tobias</a>
+                        </p>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
 
 
 
-        <script src="js/jquery-3.3.1.min.js"></script>
-        <script src="js/jquery-ui.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script src="js/jquery.countdown.min.js"></script>
-        <script src="js/jquery.easing.1.3.js"></script>
-        <script src="js/aos.js"></script>
-        <script src="js/jquery.fancybox.min.js"></script>
-        <script src="js/jquery.sticky.js"></script>
-        <script src="js/isotope.pkgd.min.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-ui.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.countdown.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
 
 
-        <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
