--- a/give.html
+++ b/give.html
@@ -98,36 +98,66 @@
 
 
         <div class="site-section cta-big-image" id="about-section">
-        <div class="container">
-          <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
-              <h2 class="section-title mb-3">About Us</h2>
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-12 text-center" data-aos="fade">
+                        <h2 class="section-title mb-3">About Us</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
+                        <figure class="circle-bg">
+                            <img src="img/phone.jpg" alt="Image" class="img-fluid">
+                        </figure>
+                    </div>
+                    <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
+                        <div class="mb-4">
+                            <h3 class="h3 mb-4 text-black">About Parkoba</h3>
+                            <p>At our company, we understand that you need quick and easy access to parking , which
+                                is why we recommend downloading our app. Our app provides a seamless and convenient way
+                                to access all of our services from the palm of your hand. With just a few taps on your
+                                mobile device, you can access a wealth of information and resources that will help you
+                                to make informed decisions and get the most out of our services.
+                                <br>
+                                <br>
+
+                                One of the key benefits of our app is that it allows you to get parking anytime,
+                                anywhere. You can log in to your account, view your profile, and manage your preferences
+                                from anywhere with an internet connection. This means that you can stay up-to-date with
+                                the latest information and get parking even when you're on the go.
+                                <br>
+                                <br>
+
+                                Another benefit of our app is that it provides you with a personalized experience. You
+                                can customize your settings to receive notifications about new services and updates that
+                                are relevant to your interests. This helps you to stay informed about what matters most
+                                to you, without having to wade through irrelevant information.
+
+                                Our app also allows you to easily book appointments, access our customer support team,
+                                and manage your account information. You can view your service history, make payments,
+                                and request support all from the convenience of your mobile device. This saves you time
+                                and effort, and allows you to focus on what's most important to you.
+
+                                Finally, our app provides you with exclusive access to special promotions, discounts,
+                                and offers that are only available to our app users. This means that you can save money
+                                on our services, and get more value for your money.
+
+                                In conclusion, downloading our app is an easy and convenient way to access all of our
+                                services from your mobile device. With a personalized experience, easy access to
+                                customer support, and exclusive offers, our app is the perfect way to get more out of
+                                our services. So why wait? Download our app today and start accessing all of the
+                                benefits that it has to offer!
+
+
+
+
+                                Regenerate response
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-              <figure class="circle-bg">
-                <img src="img/key.webp" alt="Image" class="img-fluid">
-              </figure>
-            </div>
-            <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
-              <div class="mb-4">
-                <h3 class="h3 mb-4 text-black">About Parkoba</h3>
-                <p>We are a small startup enterprise dedicated in helping Nigeria curb The flow of traffic and illegal
-                  parking. We believe that all of our customers deserve the highest level of service, and we are committed
-                  to providing just that. We are a small startup enterprise with the mission to reduce the
-                  flow of traffic and Illegal Parking in Nigeria.Parkoba allows drivers to find the closest parking to
-                  their destination, tells them how much it will cost and whether the space is available.... which means
-                  no more driving around looking for parking!
-                  Get a parking today and experience our fast, affordable and Parking Spot.
-                  Get a parking today and experience our fast and affordable Parking Spot locator.
-                  Explore the rest of our site to learn more about what we have to offer, and get in touch with any
-                  questions. Parkoba is here for you. </p>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
 
 
 
