--- a/give.html
+++ b/give.html
@@ -58,7 +58,7 @@
                         <nav class="site-navigation position-relative text-right" role="navigation">
 
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                                <li><a href="#home-section" class="nav-link">Home</a></li>
+                                <li><a href="index.html" class="nav-link">Home</a></li>
                                 <li class="has-children">
                                     <a href="#about-section" class="nav-link">About Us</a>
                                     <ul class="dropdown">
@@ -101,7 +101,7 @@
             <div class="container">
                 <div class="row mb-5">
                     <div class="col-12 text-center" data-aos="fade">
-                        <h2 class="section-title mb-3">About Us</h2>
+                        <h2 class="section-title mb-3">Download </h2>
                     </div>
                 </div>
                 <div class="row">
@@ -112,46 +112,23 @@
                     </div>
                     <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
-                            <h3 class="h3 mb-4 text-black">About Parkoba</h3>
+                            <h3 class="h3 mb-4 text-black">Download our App </h3>
                             <p>At our company, we understand that you need quick and easy access to parking , which
                                 is why we recommend downloading our app. Our app provides a seamless and convenient way
                                 to access all of our services from the palm of your hand. With just a few taps on your
                                 mobile device, you can access a wealth of information and resources that will help you
                                 to make informed decisions and get the most out of our services.
                                 <br>
-                                <br>
-
-                                One of the key benefits of our app is that it allows you to get parking anytime,
+                        
+                                 One of the key benefits of our app is that it allows you to get parking anytime,
                                 anywhere. You can log in to your account, view your profile, and manage your preferences
                                 from anywhere with an internet connection. This means that you can stay up-to-date with
                                 the latest information and get parking even when you're on the go.
                                 <br>
                                 <br>
-
-                                Another benefit of our app is that it provides you with a personalized experience. You
-                                can customize your settings to receive notifications about new services and updates that
-                                are relevant to your interests. This helps you to stay informed about what matters most
-                                to you, without having to wade through irrelevant information.
-
-                                Our app also allows you to easily book appointments, access our customer support team,
-                                and manage your account information. You can view your service history, make payments,
-                                and request support all from the convenience of your mobile device. This saves you time
-                                and effort, and allows you to focus on what's most important to you.
-
-                                Finally, our app provides you with exclusive access to special promotions, discounts,
-                                and offers that are only available to our app users. This means that you can save money
-                                on our services, and get more value for your money.
-
-                                In conclusion, downloading our app is an easy and convenient way to access all of our
-                                services from your mobile device. With a personalized experience, easy access to
-                                customer support, and exclusive offers, our app is the perfect way to get more out of
-                                our services. So why wait? Download our app today and start accessing all of the
+                                Get our App today and get a parking under three Minutes
+                                So why wait? Download our app today and start accessing all of the
                                 benefits that it has to offer!
-
-
-
-
-                                Regenerate response
                             </p>
                         </div>
                     </div>
@@ -160,82 +137,94 @@
         </div>
 
 
+        <footer class="site-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-9">
+                        <div class="row">
+                            <div class="col-md-5">
+                                <h2 class="footer-heading mb-4">About Us</h2>
+                                <p>Our mission is helping Nigeria curb The flow of traffic and illegal
+                                    parking. </p>
+                            </div>
+                            <div class="col-md-3 ml-auto">
+                                <h2 class="footer-heading mb-4">Quick Links</h2>
+                                <ul class="list-unstyled">
+                                    <li><a href="#about-section" class="smoothscroll">About Us</a></li>
+                                    <li><a href="#services-section" class="smoothscroll">Services</a></li>
+                                    <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
+                                    <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-md-3">
+                                <h2 class="footer-heading mb-4">Follow Us</h2>
+                                <a href="https://www.facebook.com/profile.php?id=100090813684604" target="_blank"
+                                    class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                                <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+                                <a href="https://www.youtube.com/channel/UColCHrH-pG-mz3FiewBThUw" target="_blank"
+                                    class=" pl-3
+                        pr-3"><span class="icon-youtube-play"></span></a>
+                                <a href=" https://www.instagram.com/parkobaofficial/" target="_blank"
+                                    class=" pl-3 pr-3"><span class="icon-instagram"></span></a>
 
+                                <!-- <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
+                        <form name="submit-to-google-sheet" action="#" method="post" class="footer-subscribe">
+                            <div class="input-group mb-3">
+                                <input type="email" class="form-control border-secondary text-white bg-transparent"
+                                    name="email" placeholder="Enter Email" aria-label="Enter Email"
+                                    aria-describedby="button-addon2" required>
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary text-black" type="submit"
+                                        id="button-addon2">Send</button>
+                                </div>
+                            </div>
+                            <span class="newsletter" id="msg"></span>
+                        </form>
+                    </div>
+                    <script>
+                        const scriptURL =
+                            '<https://script.google.com/macros/s/AKfycbzAfe3hqO7mwLyMf8A9jbNArRr7VgElKBC2XJKC1S3UMjan5cJTxETpHiF4rkc3jXY98w/exec>'
+                        const form = document.forms['submit-to-google-sheet']
+                        const msg = document.getElementById("msg")
 
-
-
-
+                        form.addEventListener('submit', e => {
+                            e.preventDefault()
+                            fetch(scriptURL, {
+                                    method: 'POST',
+                                    body: new FormData(form)
+                                })
+                                .then(response => {
+                                    msg.innerHTML = "Thank you for Subscribing!!!"
+                                    setTimeout(function () {
+                                        msg.innerHTML = ""
+                                    }, 5000)
+                                    form.reset()
+                                })
+                                .catch(error => console.error('Error!', error.message))
+                        })
+                    </script>
+                </div>
+                <div class="row pt-5 mt-5 text-center">
+                    <div class="col-md-12">
+                        <div class="border-top pt-5">
+                            <p>
+                                Parkoba &copy;<script>
+                                    document.write(new Date().getFullYear());
+                                </script> All rights reserved |<i class="icon-heart text-danger" aria-hidden="true"></i>
+                                Developed by <a href="https://oluwatobiloba2905.github.io/My-portfoilo/index.html"
+                                    target="_blank" style="color: rgb(202,32,32);">Tobias</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
-
-
-    <footer class="site-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-9">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <h2 class="footer-heading mb-4">About Us</h2>
-                            <p>Our mission is to serve God, through encouraging and teaching them those who are
-                                oppressed and down
-                                casted both physically and spiritually. </p>
-                        </div>
-                        <div class="col-md-3 ml-auto">
-                            <h2 class="footer-heading mb-4">Quick Links</h2>
-                            <ul class="list-unstyled">
-                                <li><a href="index.html/#about-section" class="smoothscroll">About Us</a></li>
-                                <li><a href="index.html/#services-section" class="smoothscroll">Services</a></li>
-                                <!-- <li><a href="index.html/#testimonials-section" class="smoothscroll">Testimonials</a></li> -->
-                                <li><a href="index.html/#contact-section" class="smoothscroll">Contact Us</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3">
-                            <h2 class="footer-heading mb-4">Follow Us</h2>
-                            <a href="https://www.facebook.com/FriendsOfGodFellowship/" class="pl-0 pr-3"><span
-                                    class="icon-facebook"></span></a>
-                            <a href="https://www.facebook.com/FriendsOfGodFellowship/" class="pl-3 pr-3"><span
-                                    class="icon-twitter"></span></a>
-                            <a href="https://www.instagram.com/fgfofficiall/" class="pl-3 pr-3"><span
-                                    class="icon-instagram"></span></a>
-                            <!-- <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a> -->
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <!-- <div class="col-md-3">
-            <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-            <form action="#" method="post" class="footer-subscribe">
-              <div class="input-group mb-3">
-                <input type="text" class="form-control border-secondary text-white bg-transparent"
-                  placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-                <div class="input-group-append">
-                  <button class="btn btn-primary text-black" type="button" id="button-addon2">Send</button>
-                </div>
-              </div>
-            </form>
-          </div> -->
-            </div>
-            <div class="row pt-5 mt-5 text-center">
-                <div class="col-md-12">
-                    <div class="border-top pt-5">
-                        <p>
-                            FGF &copy;<script>
-                                document.write(new Date().getFullYear());
-                            </script> All rights reserved |<i class="icon-heart text-danger" aria-hidden="true"></i>
-                            Developed by <a href="https://oluwatobiloba2905.github.io/My-portfoilo/index.html"
-                                target="_blank">Tobias</a>
-                        </p>
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </footer>
-
-
-
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="js/popper.min.js"></script>
