--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
       </div>
     </div>
-    <section class="site-section">
+    <section class="site-section"  id="services-section">
       <div class="container">
 
         <div class="row mb-5 justify-content-center">
@@ -220,6 +220,9 @@
               <div>
                 <h2 class="section-title mb-3">Pre-Paid Parking Spot </h2>
                 <p>Fast and affordable</p>
+                <div data-aos="fade-up" data-aos-delay="100">
+              <a href="give.html" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
+            </div>
 
                 <!-- <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p> -->
               </div>
@@ -246,7 +249,7 @@
 
 
 
-    <section class="site-section" id="services-section">
+    <section class="site-section">
       <div class="container">
         <div class="row mb-5">
 
@@ -469,6 +472,8 @@
                   <li><a href="#services-section" class="smoothscroll">Services</a></li>
                   <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
                   <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
+                  <li><a href="#contact-section" class="smoothscroll">Terms and Policy</a></li>
+
                 </ul>
               </div>
               <div class="col-md-3">
