--- a/give.html
+++ b/give.html
@@ -48,8 +48,8 @@
                 <div class="row align-items-center">
 
                     <div class="col-6 col-xl-2">
-                        <a href="#"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html"
-                                class="h2 mb-0"><span class="text-primary"></span> </a>
+                        <a href="index.html"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html"
+                                class="h2 mb-0"><span class="text-primary"></span>arkoba </a>
                             </img>
                         </a>
                     </div>
