--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
           <div class="col-6 col-xl-2">
             <a href="#"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><span
-                  class="text-primary"></span> </a>
+                  class="text-primary"></span></a>
               </img>
             </a>
           </div>
@@ -142,14 +142,38 @@
               <h3 class="h3 mb-4 text-black">About Parkoba</h3>
               <p>We are a small startup enterprise dedicated in helping Nigeria curb The flow of traffic and illegal
                 parking. We believe that all of our customers deserve the highest level of service, and we are committed
-                to providing just that. We are a small startup enterprise with the mission to reduce the
-                flow of traffic and Illegal Parking in Nigeria.Parkoba allows drivers to find the closest parking to
-                their destination, tells them how much it will cost and whether the space is available.... which means
-                no more driving around looking for parking!
-                Get a parking today and experience our fast, affordable and Parking Spot.
-                Get a parking today and experience our fast and affordable Parking Spot locator.
+                to providing just that.Welcome to our parking website, your go-to destination for all your parking
+                needs. <br> We are dedicated to providing you with the best parking services that are safe, secure, and
+                convenient. Our website offers a user-friendly interface that allows you to quickly find and book
+                parking spaces in various locations around the city.
+                <br>
+                Our team consists of experienced professionals who are passionate about making your parking experience
+                stress-free and easy. We believe that parking should be hassle-free, which is why we offer a wide range
+                of parking options to choose from, including indoor and outdoor parking lots, valet parking, and hourly
+                or daily parking rates. <span> <a href="about.html">Read More</a> </span>
+                <br>
+                <!--   We understand that finding a parking spot can be a challenge, especially in busy areas. That's why we
+                have designed our website to provide you with real-time availability and pricing information, allowing
+                you to make informed decisions about where to park. We also offer flexible booking options, so you can
+                easily adjust your parking plans as needed.
+
+                At our parking website, we prioritize your safety and security. We partner with reputable parking
+                providers who offer secure parking facilities with 24/7 surveillance and on-site staff to ensure your
+                vehicle is always safe. We also use advanced technology to ensure that your payment and personal
+                information is secure and protected.
+                <br>
+                We are committed to providing you with the best customer service and support. Our friendly and
+                knowledgeable customer service team is always available to answer any questions you may have and to
+                assist you in any way possible. We strive to make your parking experience as smooth and enjoyable as
+                possible, so you can focus on your day without worrying about your car.
+                <br>
+                In summary, our parking website offers a comprehensive range of parking services that are safe, secure,
+                and convenient. With real-time availability and pricing information, flexible booking options, and a
+                dedicated customer service team, we are your trusted partner for all your parking needs. So, start
+                browsing our website today to find the perfect parking spot for you!
                 Explore the rest of our site to learn more about what we have to offer, and get in touch with any
-                questions. Parkoba is here for you. </p>
+                questions. Parkoba is here for you.
+               </p> -->
             </div>
           </div>
         </div>
@@ -181,7 +205,7 @@
         </div>
       </div>
     </div>
-    <section class="site-section"  id="services-section">
+    <section class="site-section" id="services-section">
       <div class="container">
 
         <div class="row mb-5 justify-content-center">
@@ -221,8 +245,8 @@
                 <h2 class="section-title mb-3">Pre-Paid Parking Spot </h2>
                 <p>Fast and affordable</p>
                 <div data-aos="fade-up" data-aos-delay="100">
-              <a href="give.html" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
-            </div>
+                  <a href="give.html" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
+                </div>
 
                 <!-- <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p> -->
               </div>
