--- a/give.html
+++ b/give.html
@@ -49,7 +49,7 @@
 
                     <div class="col-6 col-xl-2">
                         <a href="index.html"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html"
-                                class="h2 mb-0"><span class="text-primary"></span>arkoba </a>
+                                class="h2 mb-0"><span class="text-primary"></span></a>
                             </img>
                         </a>
                     </div>
