--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 
                     <div class="col-6 col-xl-2">
                         <a href="index.html"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html"
-                                class="h2 mb-0"><span class="text-primary"></span>arkoba </a>
+                                class="h2 mb-0"><span class="text-primary"></span></a>
                             </img>
                         </a>
                     </div>
@@ -107,7 +107,7 @@
                 <div class="row">
                     <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
                         <figure class="circle-bg">
-                            <img src="img/phone.jpg" alt="Image" class="img-fluid">
+                            <img src="img/key.webp" alt="Image" class="img-fluid">
                         </figure>
                     </div>
                     <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
