--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
               <div class="col-md-3 ml-auto">
                 <h2 class="footer-heading mb-4">Quick Links</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#about-section" class="smoothscroll">About Us</a></li>
+                  <li><a href="about.html" class="smoothscroll">About Us</a></li>
                   <li><a href="#services-section" class="smoothscroll">Services</a></li>
                   <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
                   <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
